[package]
name = "lib-spsc-ring"
version = "0.1.0"
edition = "2024"

[[example]]
name = "sequence"
path = "examples/sequence.rs"

[[bench]]
name = "single_thread"
harness = false

[[bench]]
name = "multi_thread"
harness = false

[dependencies]
thiserror = { version = "2.0.18", default-features = false }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
heap = []
padded-slots = []
padded-handles = []
