[package]
name = "lib-spsc-ring"
version = "0.1.0"
edition = "2024"

# we dont include benchmarks in build
[lib]
bench = false

[[example]]
name = "sequence"
path = "examples/sequence.rs"

[[bench]]
name = "single_thread"
harness = false

[[bench]]
name = "multi_thread"
harness = false

[dependencies]
thiserror = { version = "2.0.18", default-features = false }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
heap = []
padded-slots = []
padded-handles = []
# artificially inserts ~21 cycles of dependent alu work in dequeue success path
# to slow polling rate; trying to keep cache line for head atomic in modified
# state on producer between invalidating empty-checks from consumer
consumer-spread = []

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "symbols"

[lints.clippy]
nursery = { level = "deny" }
pedantic = { level = "deny" }
enum_glob_use = { level = "deny" }
