[package]
name = "lib-spsc-ring"
version = "0.1.0"
edition = "2024"

# we dont include benchmarks in build
[lib]
bench = false

[[example]]
name = "sequence"
path = "examples/sequence.rs"

[[bench]]
name = "single_thread"
harness = false

[[bench]]
name = "multi_thread"
harness = false

[dependencies]

[dev-dependencies]
criterion = "0.5"

[features]
default = []
heap = []
padded-slots = []
padded-handles = []

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "symbols"

[lints.clippy]
nursery = { level = "deny" }
pedantic = { level = "deny" }
enum_glob_use = { level = "deny" }
